revise on-change select function

--- a/dicom_s3_visualizer.ipynb
+++ b/dicom_s3_visualizer.ipynb
@@ -111,7 +111,38 @@
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
+    "import boto3\n",
+    "import pydicom\n",
+    "import matplotlib.pyplot as plt\n",
+    "import io\n",
     "\n",
+    "# Function to visualize a DICOM image\n",
+    "def visualize_dicom(bucket_name, dicom_key):\n",
+    "    try:\n",
+    "        # Initialize the S3 client\n",
+    "        s3 = boto3.client('s3')\n",
+    "        \n",
+    "        # Fetch the DICOM file from S3\n",
+    "        dicom_obj = s3.get_object(Bucket=bucket_name, Key=dicom_key)\n",
+    "        dicom_data = dicom_obj['Body'].read()\n",
+    "        \n",
+    "        # Read the DICOM data using pydicom\n",
+    "        dicom_file = pydicom.dcmread(io.BytesIO(dicom_data))\n",
+    "        \n",
+    "        # Extract the pixel array from the DICOM file\n",
+    "        pixel_array = dicom_file.pixel_array\n",
+    "        \n",
+    "        # Display the DICOM image using matplotlib\n",
+    "        plt.figure(figsize=(6, 6))\n",
+    "        plt.imshow(pixel_array, cmap=plt.cm.gray)\n",
+    "        plt.title(f\"Selected DICOM File: {dicom_key}\", fontsize=12)\n",
+    "        plt.axis('off')\n",
+    "        plt.show()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error visualizing DICOM file: {e}\")\n",
+    "\n",
+    "# Ensure 'dicom_files' is not empty before creating the dropdown\n",
     "if dicom_files:\n",
     "    dropdown = widgets.Dropdown(\n",
     "        options=dicom_files,\n",
@@ -120,11 +151,21 @@
     "    )\n",
     "    \n",
     "    def on_select_change(change):\n",
+    "        # Clear the previous output\n",
     "        clear_output(wait=True)\n",
+    "        \n",
+    "        # Redisplay the dropdown so it's always visible\n",
     "        display(dropdown)\n",
-    "        visualize_dicom(bucket_name, change['new'])\n",
+    "        \n",
+    "        # Call the visualize_dicom function with the selected DICOM key\n",
+    "        selected_key = change['new']\n",
+    "        print(f\"Selected DICOM key: {selected_key}\")\n",
+    "        visualize_dicom(bucket_name, selected_key)\n",
     "    \n",
+    "    # Set up the observer for the dropdown selection\n",
     "    dropdown.observe(on_select_change, names='value')\n",
+    "    \n",
+    "    # Display the dropdown widget\n",
     "    display(dropdown)\n",
     "else:\n",
     "    print(\"No DICOM files available for selection.\")\n"
